# recommender-learn

./: .gitignore  001_bayesian_personalized_ranking.md  01_clustering_based_recommender.ipynb  02_product_recommendation.ipynb  03_recommendation.ipynb  04_implicit.ipynb  05_implicit.ipynb  06_tfidf.ipynb  07_distance.ipynb  08_bm25.ipynb  LEARN.md  README.md  _quarto.yaml  data-item.js  data.js  euclidean.js  formulae.js  index.html  main.js  main.py  pearson.js  pyproject.toml  rating2.csv
.ipynb_checkpoints/: 02_product_recommendation-checkpoint.ipynb  LEARN-checkpoint.md  ratings-checkpoint.csv
algorithm/: euclidean.js  pearson.js  sets.js  statistic.js
alt/: old_euclidean.js
core/: item-based.js  match.js  model.js  similarity.js  user-based.js
data/: data-tranposed.js
data/.ipynb_checkpoints/: data-checkpoint.js
docs/: 001_bayesian_personalized_ranking-gfm.md  01_clustering_based_recommender.md  02_product_recommendation.md  03_recommendation.md  04_implicit.md  05_implicit.md  06_tfidf.md  07_distance.md  08_bm25.md  LEARN-gfm.md  index.html
